--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "dependencies": {
+    "@types/node": "^18.11.17",
+    "arg": "4.1.0",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
-    "solc": "0.8.7-fixed"
+    "solc": "0.8.7-fixed",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   },
   "scripts": {
     "compile": "yarn solcjs --bin --abi --include-path node_modules/ --base-path . SimpleStorage.sol"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^9.0.13"
   }
 }
